# zarr-workbench

./: LICENSE  README.md
v3-sharding/: LICENSE.txt  README.md  pyproject.toml  report.csv
v3-sharding-compat/: README.md  pyproject.toml
v3-sharding-compat/data/zarr-2/dtype-bool/nd-1/co-16_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-1/co-64_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-2/co-16_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-2/co-64_ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-2/co-64ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-3/co-16_ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-3/co-64_ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-3/co-64ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-4/co-16_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-4/co-64_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-5/co-16_ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-5/co-64_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-5/co-64ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-6/co-64_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-bool/nd-6/co-64ci-1_ck-slash/: .zarray
v3-sharding-compat/data/zarr-2/dtype-float32/nd-1/co-16_ci-1_ck-dot/: .zarray  1  14  2  7
v3-sharding-compat/data/zarr-2/dtype-float32/nd-1/co-16_ci-1_ck-slash/: 11  15  4
v3-sharding-compat/data/zarr-2/dtype-float32/nd-1/co-64_ci-1_ck-dot/: .zarray  15  17  23  55  63
v3-sharding-compat/data/zarr-2/dtype-float32/nd-1/co-64_ci-1_ck-slash/: .zarray  10  14  31  39  44  52
v3-sharding-compat/data/zarr-2/dtype-float32/nd-1/co-64ci-1_ck-dot/: 12  19  24  6  61
v3-sharding-compat/data/zarr-2/dtype-float32/nd-1/co-64ci-1_ck-slash/: 16  20  27  28  30  34  37  42  43  49  53  56
v3-sharding-compat/data/zarr-2/dtype-float32/nd-2/co-16_ci-1_ck-dot/: .zarray  0.7
v3-sharding-compat/data/zarr-2/dtype-float32/nd-2/co-16_ci-1_ck-slash/: 0.15
v3-sharding-compat/data/zarr-2/dtype-float32/nd-2/co-64_ci-1_ck-dot/: .zarray  0.3
v3-sharding-compat/data/zarr-2/dtype-float32/nd-2/co-64_ci-1_ck-slash/: 0.40
v3-sharding-compat/data/zarr-2/dtype-float32/nd-2/co-64ci-1_ck-dot/: 0.44
v3-sharding-compat/data/zarr-2/dtype-float32/nd-2/co-64ci-1_ck-slash/: .zarray  0.24  0.27  0.39  0.42
v3-sharding-compat/data/zarr-2/dtype-float32/nd-3/co-16_ci-1_ck-dot/: .zarray  0.0.3
v3-sharding-compat/data/zarr-2/dtype-float32/nd-3/co-16_ci-1_ck-slash/: 0.2.0  0.2.2
v3-sharding-compat/data/zarr-2/dtype-float32/nd-3/co-64_ci-1_ck-dot/: .zarray
v3-sharding-compat/data/zarr-2/dtype-float32/nd-3/co-64_ci-1_ck-slash/: .zarray  0.0.2  0.1.4  0.7.1
v3-sharding-compat/data/zarr-2/dtype-float32/nd-3/co-64ci-1_ck-dot/: 0.0.5
v3-sharding-compat/data/zarr-2/dtype-float32/nd-3/co-64ci-1_ck-slash/: 0.2.4
v3-sharding-compat/data/zarr-2/dtype-float32/nd-4/co-16_ci-1_ck-dot/: 0.0.1.1  0.0.2.1
v3-sharding-compat/src/v3_sharding_compat/: __init__.py
v3-sharding-compat/tests/: test_make_data.py
v3-sharding-perf/: LICENSE.txt  pyproject.toml
v3-sharding/src/v3_sharding/: __about__.py  array_write.py
v3-sharding/tests/: test_array_write.py
(+2026 files in other folders)
